// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate filter data: Select > property:["multiple = false"] 1`] = `
{
  "operators": {
    "Text": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "包含",
        "style": "tags",
        "value": "contains",
      },
      {
        "label": "不包含",
        "style": "tags",
        "value": "not_contain",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "label": "Select",
      "multiple": false,
      "operatorKey": "Text",
      "renderType": "SELECT",
      "value": "lLyhZ6ThDBd2_O5JKOjzN",
    },
  ],
}
`;

exports[`Generate filter data: Select > property:["multiple = true"] 1`] = `
{
  "operators": {
    "Text": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "包含",
        "style": "tags",
        "value": "contains",
      },
      {
        "label": "不包含",
        "style": "tags",
        "value": "not_contain",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "label": "Select",
      "multiple": true,
      "operatorKey": "Text",
      "renderType": "SELECT",
      "value": "lLyhZ6ThDBd2_O5JKOjzN",
    },
  ],
}
`;
